fixed discover movies alignment

--- a/styles.css
+++ b/styles.css
@@ -390,3 +390,7 @@ select {
   font-weight: bold;
   color: #6030b1;
 }
+
+#movies .movie {
+  justify-content: start;
+}
